--- a/style.css
+++ b/style.css
@@ -22,60 +22,27 @@ body {
     margin: 0 16px;
     padding: 24px 0;
     }
+    
     * {
         margin: 0;
         padding: 0;
         }
+.escola {
+        background-image: linear-gradient(#086305,#01fd23);
+        color: black;
+        display:flex;
+        align-items: center;
+        padding: 24px 0;
+                }
 
- .topo {
-    padding: 0px 20px;
-    display: flex;
-    justify-content: center;
-    text-align: center;
-    background-image: linear-gradient(to left, rgb(205, 255, 186), rgb(206, 255, 194));
-   background-size: 500% 100%;
-   animation: degrede-animado 6s  infinite alternate ;
-    color: black;
-       }
+.imagem-escola{
+            width:25%;
+            }
 
-  main {
-    padding: 20px 0px;
-    display: flex;
-    justify-content: space-around;
-    background-image: linear-gradient(to left, rgb(206, 255, 194)85, rgb(206, 245, 201)));
-   background-size: 500% 100%;
-   animation: degrede-animado 6s  infinite alternate ;
-    color: black;
-  }
-  section, aside {
-    width: 45%;
-  }
-  section header {
-    padding: 10px;
-    text-align: center;
-    background-color: rgb(0, 255, 55);
-  }
-  section div {
-    padding: 10px;
-    text-align: center;
-    background-color: rgb(255, 255, 255);
-  }
-  aside header {
-    padding: 10px;
-    text-align: center;
-    background-color: rgb(0, 255, 0);
-  }
-  aside div {
-    padding: 10px;
-    text-align: center;
-    background-color: rgb(255, 255, 255);
-  }
-*{
-    margin: 200;
-    padding: 100;
-    box-sizing: border-box;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
+.escola-conteudo{
+          width: 35%;
+          justify-content: center;
+          align-items: center; }
 
 .box-degrade{
     width: 100%;
